Changelog
=========

0.2 (unreleased)
----------------

0.1 (2012-12-13)
----------------

- Take a PO and validate that there is not UNTRANSLATED or FUZZY string