@@ -19,6 +19,7 @@ requirements = ['setuptools',
 entry_points = {
     'console_scripts': [
         'check_po = check_po:main',
+        'podiff = check_po.podiff:main',
     ]
 }
 
